+ ebook .pdf optimize
Signed-off-by: Dmitry Ponyatov <dponyatov@gmail.com>

--- a/manual/Makefile
+++ b/manual/Makefile
@@ -12,6 +12,12 @@ GITHASH = $(shell git rev-parse --short HEAD		)
 GITLAST = $(shell git rev-list --tags --max-count=1	)
 GITTAG  = $(shell git describe --tags $(GITLAST)	)
 
+KITFORTH_$(GITTAG).pdf: KITFORTH.pdf
+	gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/ebook \
+		-dNOPAUSE -dQUIET -dBATCH \
+		-sOutputFile=$@ $<
+# /screen /ebook /prepress
+
 KITFORTH.pdf: $(TEX) $(LST) $(FIG) Makefile
 	echo "\\date{версия $(GITTAG)}" > date.tex
 	$(LATEX) $< && $(LATEX) $<
