--- a/manual/Makefile
+++ b/manual/Makefile
@@ -12,6 +12,7 @@ GITHASH = $(shell git rev-parse --short HEAD		)
 GITLAST = $(shell git rev-list --tags --max-count=1	)
 GITTAG  = $(shell git describe --tags $(GITLAST)	)
 
+pdf: KITFORTH_$(GITTAG).pdf
 KITFORTH_$(GITTAG).pdf: KITFORTH.pdf
 	gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/ebook \
 		-dNOPAUSE -dQUIET -dBATCH \
