--- a/manual/Makefile
+++ b/manual/Makefile
@@ -5,6 +5,11 @@ TEX += intro/intro.tex intro/iot.tex
 TEX += FORTH/FORTH.tex
 
 TEX += implement/implement.tex implement/way.tex
+TEX += implement/structure.tex
+FIG += /tmp/structure1.pdf
+FIG += /tmp/structure2.pdf
+FIG += /tmp/structure3.pdf
+FIG += /tmp/structure4.pdf
 TEX += compiler/bc.tex compiler/bcx.tex
 TEX += compiler/compiler.tex
 
@@ -24,3 +29,6 @@ KITFORTH_$(GITTAG).pdf: KITFORTH.pdf
 		-dNOPAUSE -dQUIET -dBATCH \
 		-sOutputFile=$@ $<
 # /screen /ebook /prepress
+
+/tmp/%.pdf: implement/%.dot
+	dot -T pdf -o $@ $<
